--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
     </header>
 
     <div class="header">
-      <div class="movies">
-        <div class="movie"></div>
-      </div>
+      <div class="movies"></div>
     </div>
 
     <script src="./js/index.js"></script>
